// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`with current user renders correctly 1`] = `
<div
  className="MuiGrid-item-2 MuiGrid-grid-xs-12-41 MuiGrid-grid-md-8-65"
  style={
    Object {
      "margin": "0 auto 36px auto",
    }
  }
>
  <div
    className="MuiPaper-root-99 MuiPaper-elevation1-102 MuiPaper-rounded-100 MuiCard-root-98"
  >
    <div
      className="MuiCardContent-root-126"
    >
      <div
        currentUser={
          Object {
            "email": "foo@bar.com",
            "name": "foo",
          }
        }
        location={Object {}}
      >
        New - 
      </div>
      <div
        currentUser={
          Object {
            "email": "foo@bar.com",
            "name": "foo",
          }
        }
        location={Object {}}
      >
        List - 
      </div>
    </div>
  </div>
</div>
`;

exports[`without current user renders correctly 1`] = `
<div
  className="MuiGrid-item-2 MuiGrid-grid-xs-12-41 MuiGrid-grid-md-8-65"
  style={
    Object {
      "margin": "0 auto 36px auto",
    }
  }
>
  <div
    className="MuiPaper-root-99 MuiPaper-elevation1-102 MuiPaper-rounded-100 MuiCard-root-98"
  >
    <div
      className="MuiCardContent-root-126"
    >
      <p
        className="MuiTypography-root-127 MuiTypography-body1-136 MuiTypography-colorInherit-156"
      >
        <div
          style={
            Object {
              "textDecoration": "none",
            }
          }
          to={
            Object {
              "pathname": "/auth/sign-up",
              "state": Object {
                "referrer": undefined,
              },
            }
          }
        >
          Link - 
          Cadastre-se
        </div>
         
        <span>
          para deixar comentários.
        </span>
      </p>
      <div
        location={Object {}}
      >
        List - 
      </div>
    </div>
  </div>
</div>
`;
